Project

General

Profile

Actions

Bug #51540

closed

bluestore doesn't respect "bluestore_warn_on_spurious_read_errors" config parameter

Added by Igor Fedotov almost 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 1 (0 open1 closed)

Copied to bluestore - Backport #51664: pacific: bluestore doesn't respect "bluestore_warn_on_spurious_read_errors" config parameterResolvedActions
Actions #1

Updated by Igor Fedotov almost 3 years ago

  • Status changed from New to In Progress
  • Assignee set to Igor Fedotov
Actions #2

Updated by Igor Fedotov almost 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 42197
Actions #3

Updated by Kefu Chai almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51664: pacific: bluestore doesn't respect "bluestore_warn_on_spurious_read_errors" config parameter added
Actions #6

Updated by Igor Fedotov over 2 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF